sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value v
    v=getValeur(i)
    ^AlgInsertionSort:5: error: not found: value v
    if (getValeur(i-1)>v){
                       ^AlgInsertionSort:6: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      getValeur(i)=getValeur(i-1)
      ^